Refactor constants and improve folder and TTS management
- Renamed `Const` classes to `Constants` for consistency across the codebase.
- Updated imports to reflect the new naming convention for constants.
- Enhanced the dashboard and folder screens to use the new constants.
- Introduced a new `FlashcardManagementArgs` model for managing flashcard data.
- Created a `FlashcardManagementScreen` to handle flashcard management UI.
- Implemented folder opening logic to determine whether to navigate to subfolders, flashcards, or show an empty state.
- Added tests for the folder opening logic to ensure correct behavior based on folder contents.
- Updated localization files to include new strings for flashcard management.
- Refactored color resolution logic in folder widgets for better readability and maintainability.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -406,6 +406,32 @@
   "@foldersTrashEmptyDescription": {
     "description": "Empty state description for trash mode."
   },
+  "flashcardsTitle": "Flashcards",
+  "@flashcardsTitle": {
+    "description": "Fallback title for flashcard management screen."
+  },
+  "flashcardsManageTitle": "Flashcards · {folderName}",
+  "@flashcardsManageTitle": {
+    "description": "Title for flashcard management screen scoped to a folder.",
+    "placeholders": {
+      "folderName": {
+        "type": "String"
+      }
+    }
+  },
+  "flashcardsTotalLabel": "{count} flashcards in this folder",
+  "@flashcardsTotalLabel": {
+    "description": "Total flashcard count label on flashcard management screen.",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "flashcardsFeatureDescription": "Manage flashcards in this folder from this screen.",
+  "@flashcardsFeatureDescription": {
+    "description": "Intro text shown on flashcard management screen."
+  },
   "homeTitle": "LearnWise - Text To Speech",
   "@homeTitle": {
     "description": "Main home screen title shown in the app bar."
