--- a/learn-wire-api-service/src/main/resources/messages.properties
+++ b/learn-wire-api-service/src/main/resources/messages.properties
@@ -4,6 +4,10 @@ common.error.runtime=Unexpected runtime error.
 
 folder.error.notFound=Folder not found.
 folder.error.negativeAggregate=Aggregate flashcard count cannot be negative.
+folder.error.duplicateName=Folder name already exists in this location.
+folder.error.parentHasFlashcards=Cannot create a subfolder because this folder already contains flashcards.
+flashcard.error.notFound=Flashcard not found.
+flashcard.error.folderHasSubfolders=Cannot create flashcards because this folder already contains subfolders.
 
 folder.validation.name.required=Folder name is required.
 folder.validation.name.tooLong=Folder name is too long.
@@ -16,3 +20,11 @@ folder.validation.sortDirection.invalid=Sort direction is invalid.
 folder.validation.parent.notFound=Parent folder does not exist.
 folder.validation.parent.self=Folder cannot be its own parent.
 folder.validation.parent.cycle=Folder hierarchy cannot contain a cycle.
+flashcard.validation.front.required=Flashcard front text is required.
+flashcard.validation.front.tooLong=Flashcard front text is too long.
+flashcard.validation.back.required=Flashcard back text is required.
+flashcard.validation.back.tooLong=Flashcard back text is too long.
+flashcard.validation.page.invalid=Page must be greater than or equal to zero.
+flashcard.validation.size.invalid=Size must be between 1 and 100.
+flashcard.validation.sortBy.invalid=Sort field is invalid.
+flashcard.validation.sortDirection.invalid=Sort direction is invalid.
