feat: add deck-based folder and flashcard management

--- a/learn-wire-api-service/src/main/resources/messages.properties
+++ b/learn-wire-api-service/src/main/resources/messages.properties
@@ -5,9 +5,12 @@ common.error.runtime=Unexpected runtime error.
 folder.error.notFound=Folder not found.
 folder.error.negativeAggregate=Aggregate flashcard count cannot be negative.
 folder.error.duplicateName=Folder name already exists in this location.
-folder.error.parentHasFlashcards=Cannot create a subfolder because this folder already contains flashcards.
+folder.error.parentHasDecks=Cannot create a subfolder because this folder already contains decks.
+deck.error.notFound=Deck not found.
+deck.error.duplicateName=Deck name already exists in this folder.
+deck.error.folderHasSubfolders=Cannot create a deck because this folder already contains subfolders.
 flashcard.error.notFound=Flashcard not found.
-flashcard.error.folderHasSubfolders=Cannot create flashcards because this folder already contains subfolders.
+flashcard.error.deckNotFound=Cannot create flashcards because the deck does not exist.
 
 folder.validation.name.required=Folder name is required.
 folder.validation.name.tooLong=Folder name is too long.
@@ -28,3 +31,10 @@ flashcard.validation.page.invalid=Page must be greater than or equal to zero.
 flashcard.validation.size.invalid=Size must be between 1 and 100.
 flashcard.validation.sortBy.invalid=Sort field is invalid.
 flashcard.validation.sortDirection.invalid=Sort direction is invalid.
+deck.validation.name.required=Deck name is required.
+deck.validation.name.tooLong=Deck name is too long.
+deck.validation.description.tooLong=Deck description is too long.
+deck.validation.page.invalid=Page must be greater than or equal to zero.
+deck.validation.size.invalid=Size must be between 1 and 100.
+deck.validation.sortBy.invalid=Sort field is invalid.
+deck.validation.sortDirection.invalid=Sort direction is invalid.
