Refactor flashcard and folder features for improved code quality and UI enhancements
- Update flashcard form schema to use StringUtils for normalization.
- Enhance FlashcardCardSectionHeader widget with subtitle and improved styling.
- Convert FlashcardContentCard to StatefulWidget for audio playing state management.
- Refactor FlashcardSetMetadataSection to simplify metadata display.
- Modify FlashcardUiState to track currently playing flashcard.
- Remove unused folder creation buttons in FolderScreen.
- Update folder form schema to utilize StringUtils for normalization.
- Simplify FolderListCard by removing open action from the popup menu.
- Add a script to enforce StringUtils usage contract across the codebase.
- Update localization files to include new metadata labels.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -800,6 +800,10 @@
   "@flashcardsOwnerFallback": {
     "description": "Fallback owner name when deck owner is not available."
   },
+  "flashcardsUpdatedRecentlyLabel": "Updated recently",
+  "@flashcardsUpdatedRecentlyLabel": {
+    "description": "Metadata label indicating the deck was updated recently."
+  },
   "flashcardsPreviewPlaceholder": "No preview card yet",
   "@flashcardsPreviewPlaceholder": {
     "description": "Placeholder text in hero preview when there is no flashcard item."
